add invite to chat
